developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_name_must_not_contain_square_brackets-store.kmn
c Description: Verifies that kmc reports an error with invalid names in groups, stores, and deadkeys

store(&NAME) 'error_name_must_not_contain_square_brackets-store'

begin unicode > use(main)

store(test[yeah]) 'test'

group(main) using keys
  + [K_A] > 'a'
